classDiagram
    direction TB

    class Usuario {
        +username: str
        +rol: SOLICITANTE / DESARROLLADOR / COORDINADOR
        +is_staff: bool
        +is_superuser: bool
    }

    class Sistema {
        +codigo: str
        +nombre: str
        +prompt: TextField (opcional, para IA)
    }

    class UsuarioSistema {
        +usuario: FK
        +sistema: FK
    }

    class Ticket {
        +titulo: str
        +descripcion_original: HTML (Quill)
        +estado: PENDIENTE / EN_PROCESO / REABIERTO / CERRADO
        +estado_previo: nullable
        +modificado_en: datetime (null hasta 1ra edicion)
        +reabierto_en: datetime (null, para novedades)
        +eliminado_en: datetime (soft delete)
        +cerrado_en: datetime
    }

    class TicketDesarrollador {
        +ticket: FK
        +usuario: FK
        +activo: bool
    }

    class Comentario {
        +cuerpo: HTML (Quill, sanetizado nh3)
        +modificado_en: datetime (null)
        +eliminado_en: datetime (soft delete)
    }

    class LecturaTicket {
        +usuario: FK
        +ticket: FK
        +ultima_lectura_en: datetime
        +unique_together(usuario, ticket)
    }

    class Adjunto {
        +archivo: FileField (UUID, sin extension)
        +tipo: IMAGEN / DOCUMENTO
        +ticket: FK (XOR comentario)
        +comentario: FK (XOR ticket)
    }

    class ModeloIA {
        +proveedor: GROQ / GEMINI / OPENROUTER / NVIDIA / OLLAMA
        +modelo: str
        +formato_salida: RESPONSE_FORMAT / NATIVO / NINGUNO
    }

    class ConfiguracionIA {
        +modelo_activo: FK ModeloIA (singleton)
    }

    class AnalisisIA {
        +ticket: FK
        +tipo: TECNICO (unico hoy)
        +salida_estructurada: JSON
        +estado_aprobacion
        +modelo_ia: FK
        +version_prompt: str
    }

    Usuario "1" --> "0..*" UsuarioSistema : accede a
    Sistema "1" --> "0..*" UsuarioSistema : tiene
    Usuario "1" --> "0..*" Ticket : solicita
    Sistema "1" --> "0..*" Ticket : pertenece a
    Ticket "1" --> "0..*" Comentario : tiene
    Usuario "1" --> "0..*" Comentario : escribe
    Ticket "1" --> "0..*" TicketDesarrollador : tomado por
    Usuario "1" --> "0..*" TicketDesarrollador : colabora
    Usuario "1" --> "0..*" LecturaTicket : lee
    Ticket "1" --> "0..*" LecturaTicket : novedad por
    Ticket "0..1" --> "0..*" Adjunto : posee
    Comentario "0..1" --> "0..*" Adjunto : posee
    Ticket "1" --> "0..*" AnalisisIA : analizado por
    ModeloIA "1" --> "0..1" ConfiguracionIA : es el activo
    AnalisisIA "1" --> "0..1" ModeloIA : usa